# Memex

./: .gitignore  CLAUDE.md  README-ko.md  README.md  projects.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: .gitignore  CHANGELOG.md  PLAN.md  PROGRESS.md  README.md  big-graph.html  eslint.config.js  hero-mesh.html  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
app/docs/: E2E.md
app/docs/specs/: 2026-06-15-galaxy-layout-design.md  2026-06-27-cosmic-web-graph.md  2026-07-01-embedded-local-model.md  2026-07-03-graph-calm-cosmic-web.md  2026-07-13-hierarchical-galaxy-legend-design.md  2026-07-22-retrieval-first-ingest-design.md
app/scripts/: agent-smoke.mjs  ask-stages-smoke.mjs  audio-smoke.mjs  capture-galaxy.mjs  capture-graph-drag.mjs  capture-mesh.mjs  capture-shots.mjs  clip-smoke.mjs  cmdbar-a11y-smoke.mjs  crash-screen-smoke.mjs  graph-perf.mjs  history-a11y-smoke.mjs  i18n-smoke.mjs  import-smoke.mjs  multiverse-smoke.mjs  ollama-delete-smoke.mjs  orbit-ease-smoke.mjs  pdf-smoke.mjs  profile-freeze.mjs  profile-real-vault.mjs  provenance-smoke.mjs  query-smoke.mjs  reindex-progress-smoke.mjs  route-smoke.mjs  schedule-smoke.mjs  semantic-discoverability-smoke.mjs  smoke.sh  smoke_full.sh  study-smoke.mjs  tasks-smoke.mjs  timelapse-smoke.mjs  verify-arrows.mjs  verify-bundles.mjs  verify-drawer-viewports.mjs  verify-edges.mjs  verify-graph.mjs  verify-multiverse-viewports.mjs  verify-refresh.mjs  wikify-grounding-smoke.mjs
app/src/: App.tsx  bigGraph.ts  heroMesh.ts  main.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/benches/: vector_store.rs
app/src-tauri/capabilities/: default.json
app/src-tauri/eval/: BASELINE.md  retrieval-queries.json
app/src-tauri/examples/: bench_local_llm.rs  mcp_spike.rs  retrieval_eval.rs  test_claude_ipc.rs  test_ingest.rs  test_local_llm.rs
app/src-tauri/icons/: icon.icns
app/src-tauri/models/: LICENSE-gemma.txt  LICENSE-hyperclovax-seed.txt  gemma-3-1b-it-q4_k_m.gguf  seed-0.5b-q4_k_m.gguf
app/src-tauri/src/: agent_tools.rs  claude.rs  cli_agent.rs  clip.rs  commands.rs  embeddings.rs  extract.rs  git_log.rs  index.rs  index_updater.rs  lib.rs  local_llm.rs  main.rs  mcp_native.rs  mcp_server.rs  memex_pro.rs  ollama.rs  parser.rs  perf.rs  pipeline.rs  provenance.rs  providers.rs  registry.rs  sample_vault.rs  schedules.rs  secrets.rs  settings.rs  tasks.rs  validator.rs  vault.rs  vector_index.rs  whisper.rs  youtube.rs
app/src-tauri/src/importers/: chatgpt.rs  claude_code.rs  claude_web.rs  codex.rs  ledger.rs  mod.rs  secrets_scan.rs
app/src-tauri/tests/: git_log_real.rs  native_bridges.rs  provider_adapters.rs  vault_lifecycle.rs
app/src/assets/: spaceship-LICENSE.txt
app/src/components/: AgentPanel.tsx  AudioOverviewPanel.tsx  BacklinksPanel.tsx  CommandBar.tsx  ConversationImport.tsx  DialogHost.tsx  Editor.tsx  ErrorBoundary.tsx  GraphControls.tsx  GraphGaps.tsx  GraphHelp.tsx  GraphInspector.tsx  GraphLegend.tsx  GraphView.tsx  HelpWidget.tsx  IngestMiniGraph.tsx  IngestProgress.tsx  LinkSuggestions.tsx  MascotCameo.tsx  MascotClip.tsx  MiniGalaxy.tsx  ModelSelect.tsx  MultiverseScene.tsx  NodePreview.tsx  OllamaSetup.tsx  OnboardingWizard.tsx  PdfViewer.tsx  RelatedPanel.tsx  ShipHud.tsx  Sidebar.tsx  ThinkingGalaxy.tsx  Topbar.tsx  Viewer.tsx  ZoteroImport.tsx
app/src/lib/: activationWave.test.ts  activationWave.ts  agentLoop.test.ts  agentLoop.ts  annotations.ts  atlasLayout.chunked.test.ts  atlasLayout.fit.test.ts  atlasLayout.synapse.test.ts  atlasLayout.ts  audioOverview.test.ts  audioOverview.ts  autoIngest.ts  autoReflect.ts  autoReindex.test.ts  autoReindex.ts  budget.test.ts  budget.ts  cardStore.test.ts  cardStore.ts  cards.test.ts  cards.ts  chat.test.ts  chat.ts  clusterLabels.ts  clusterTopics.test.ts  clusterTopics.ts  communityHullLayer.hull.test.ts  communityHullLayer.ts  coreGlowLayer.ts  cosmicEvents.ts  cosmicLod.test.ts  cosmicLod.ts  devMock.parity.test.ts  devMock.ts  digests.test.ts  digests.ts  dustLayer.test.ts  dustLayer.ts  edgeBundleLayer.ts  edgeBundles.test.ts  (+94 more)
app/src/pages/: PageGraph.tsx  PageHistory.tsx  PageIngest.tsx  PageMultiverse.tsx  PageOverview.tsx  PageProvenance.tsx  (+8 more)
automation/: README.md  autoingest.py  digest.py  test_autoingest.py  test_digest.py
clipper/: README.md  background.js  manifest.json
cosmic-refs/: cosmic-refs.md
dev-status/: architecture.md  index.md  ingest-loadtest.sh  roadmap.md
dev-status/areas/: backend-ai.md  backend-mcp.md  backend-vault.md  frontend-ui.md  graph-3d.md  state-ipc.md
docs/: SIGNING.md  import-guide.md  mascot-clip-backlog.md  mascot-motion-prompts.md  roadmap.md
ingest-reports/: 2026-04-24-0855-byte-pair-encoding-bpe.md
mcp-server/: README.md  install.sh  memex_mcp.py  project_registry.py  requirements.txt  serve.sh  test_memex_mcp.py
plans/: 2026-07-12-graph-overhaul-gemma.md  2026-07-13-graph-subsystem-analysis.md  backlog.md  blocked.md  memex-ralph-prompt.md  today-queue.md
raw/: byte-pair-encoding-bpe.md  getting-started.md  lazyclaw-codebase-2026-06.md
wiki/: andrej-karpathy.md  byte-pair-encoding.md  gpt-1.md  index.md  llm-training-pipeline.md  log.md  memex.md  nanochat.md  overview.md  pretrain-finetune-paradigm.md  source-byte-pair-encoding-bpe.md
wiki/lazyclaw/: lazyclaw-commit-history.md  lazyclaw-overview.md  source-lazyclaw-codebase-2026-06.md
(+44 files in other folders)
