[package]
name = "memex"
version = "0.1.0"
description = "Memex — desktop wiki for plain markdown vaults"
authors = ["Memex contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "memex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gray_matter = "0.3"
tempfile = "3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
calamine = "0.30.1"
pdf-extract = "0.10.0"
# Embedded local model (bundled SEED 0.5B GGUF). Pure in-process inference — no
# daemon, no Python. Metal is on by default on macOS. Vendors + compiles
# llama.cpp at build time (adds ~5 min to a clean release build).
llama-cpp-2 = "0.1.150"
# Streaming UTF-8 decode for llama token pieces (Hangul spans token boundaries).
encoding_rs = "0.8"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
serial_test = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
