[package]
name = "memex"
version = "0.2.2"
description = "Memex — desktop wiki for plain markdown vaults"
authors = ["Memex contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "memex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gray_matter = "0.3"
tempfile = "3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
calamine = "0.30.1"
pdf-extract = "0.10.0"
# Embedded local model (bundled SEED 0.5B GGUF). Pure in-process inference — no
# daemon, no Python. Metal is on by default on macOS. Vendors + compiles
# llama.cpp at build time (adds ~5 min to a clean release build).
llama-cpp-2 = "0.1.150"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
# Recoverable deletes: delete_path moves entries to the OS trash instead of
# unlinking them, so a mis-click never permanently destroys notes.
trash = "5.2.3"
rmcp = { version = "=2.2.0", default-features = false, features = ["server", "macros", "schemars", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
axum = "0.8"
tokio-util = "0.7"
similar = "2"
notify = "8.2.0"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
serial_test = "3"
criterion = "0.5"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bench]]
name = "vector_store"
harness = false

# Benches run on a release-derived profile. The shipped release profile is tuned
# for binary size (opt-level = "s", fat LTO), which both distorts CPU numbers and
# makes every bench build a full relink. Bench with a normal optimizing profile
# instead: the absolute numbers then read slightly faster than the shipped build,
# but the A/B deltas these benches exist to measure stay honest.
[profile.bench]
opt-level = 3
lto = false
codegen-units = 16
strip = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
